<?xml version="1.0"?>
<package format="2">
  <name>hiwin_resources</name>
  <version>1.2.1</version>
  <description>
    <p>
      Shared configuration data for hiwin manipulators.
    </p>
    <p>
      This package contains common urdf / xacro resources used by
      ABB related packages.
    </p>
  </description>
  <author email="dougkeba@gmail.com">Doug Smith</author>
  <maintainer email="dougkeba@gmail.com">Doug Smith</maintainer>
  <license>Apache2</license>

  <!-- <url type="website">http://wiki.ros.org/abb_resources</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb</url>
 -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
